log
Thu 09 May 2024 05:31:26 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
049d10a
Thu 09 May 2024 05:41:40 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:41: error: ‘TreeNode’ has no member named ‘key’
   81 |         int cmp = strcmp((char*) current->key, (char*)key);
      |                                         ^~
treemap.c:81:13: error: unused variable ‘cmp’ [-Werror=unused-variable]
   81 |         int cmp = strcmp((char*) current->key, (char*)key);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
6fcf61e
Thu 09 May 2024 05:43:57 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:32: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   86 |             return(current->key, current->value);
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
8362efd
Thu 09 May 2024 05:50:13 PM UTC: 
 treemap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:20: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   86 |             return current;
      |                    ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
846e8f8
Thu 09 May 2024 05:51:18 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b705f81
Thu 09 May 2024 05:51:47 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |         int cmp = tree->lower_than(current->key, key);
      |                                           ^~
Compilation failed
1cbf23c
Thu 09 May 2024 05:52:16 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1c6b2d8
Thu 09 May 2024 06:28:32 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:14: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘void *’ [-Werror=format=]
   81 |     printf("%s\n", key);
      |             ~^     ~~~
      |              |     |
      |              |     void *
      |              char *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
1f0d981
Thu 09 May 2024 06:28:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a3cc314
Thu 09 May 2024 06:30:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
71a4305
Thu 09 May 2024 06:31:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fea9a05
Thu 09 May 2024 06:31:52 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
fafe089
Thu 09 May 2024 06:32:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
71e20d8
Thu 09 May 2024 06:32:44 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
57cc630
Thu 09 May 2024 06:33:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0087926
Thu 09 May 2024 06:33:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6f2f1d0
Thu 09 May 2024 06:38:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
d50c9e7
Thu 09 May 2024 06:39:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f2bd560
Thu 09 May 2024 06:42:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
459e3ba
Thu 09 May 2024 06:43:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
d144996
Thu 09 May 2024 06:43:26 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
bd17480
Thu 09 May 2024 06:43:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
9a5f8db
Thu 09 May 2024 07:05:33 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:59:20: error: expected ‘;’ before ‘}’ token
   59 |         x = x->left
      |                    ^
      |                    ;
   60 |     }
      |     ~               
Compilation failed
09f2f9d
Thu 09 May 2024 07:05:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|6
total_score: 5/70
686f23b
